--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <h1 class="title">2023 신년계획</h1>
     <p class="msg">올해에는 다 해보자!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t5 center done">항해99 완주</div>
+        <div class="bucket img1-t5 center">항해99 완주</div>
         <div class="bucket img2-t5 center">개발자로 취업하기</div>
         <div class="bucket img2-t5 center">몸무게 80kg 만들기</div>
         <div class="bucket img1-t5 center">영어 공부하기</div>
