--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="row flex-row wrap">
         <div class="bucket img1-t5 center">항해99 완주</div>
         <div class="bucket img2-t5 center">개발자로 취업하기</div>
-        <div class="bucket img2-t5 center done">몸무게 80kg 만들기</div>
+        <div class="bucket img2-t5 center">몸무게 80kg 만들기</div>
         <div class="bucket img1-t5 center">영어 공부하기</div>
         <div class="bucket img1-t5 center">스페인어 공부하기</div>
         <div class="bucket img2-t5 center">스노우보드 배우기</div>
